# Material_effect_of_a_Silicon_layer

./: CMakeLists.txt  README.md  Silicon_material_effect.ipynb  main.cc  run.sh
include/: ActionInitialization.hh  DataRecorder.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DataRecorder.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
